# head-hunter

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
HeadHunter/: asgi.py  settings.py  urls.py  wsgi.py
frontend/head-hunter/: package-lock.json  package.json
frontend/head-hunter/src/: App.css  App.js  Footer.js
headhunter/: .env  manage.py
headhunter/headhunter/: asgi.py  settings.py  urls.py  wsgi.py
